--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'realm-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "cn.kisoo.forest"
         minSdkVersion 15
@@ -26,12 +27,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile "io.reactivex.rxjava2:rxjava:2.1.12"
-    compile 'com.squareup.retrofit2:retrofit:2.4.0'
-
+    implementation 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    implementation 'com.android.support:design:24.2.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'androidx.core:core-ktx:0.3'
+    implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'com.jude:beam:3.0.1'
     testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
     mavenCentral()
