--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.TimeDownActivity"/>
-        <service android:name=".service.WindowChangeService">
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
-        </service>
+        <!--<service android:name=".service.WindowChangeService">-->
+            <!--<meta-data-->
+                <!--android:name="android.accessibilityservice"-->
+                <!--android:resource="@xml/accessibility_service_config" />-->
+        <!--</service>-->
 
     </application>
 
