--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,16 +27,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.0.0-alpha1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
-    implementation 'com.android.support:design:24.2.1'
+    implementation 'com.android.support:design:27.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.orhanobut:logger:2.2.0'
-    implementation 'com.jude:beam:3.0.1'
     testCompile 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation project(':beams')
 }
 repositories {
     mavenCentral()
