--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.RegisterActivity">
+        <activity
+            android:name=".ui.activity.LoginActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,9 +21,12 @@
         </activity>
         <activity android:name=".ui.activity.TimeDownActivity" />
         <activity android:name=".ui.activity.LoseActivity" />
-        <activity android:name=".ui.activity.LoginActivity" />
+        <activity
+            android:name=".ui.activity.RegisterActivity"
+            android:launchMode="singleTask" />
         <activity android:name=".ui.activity.MainActivity" />
-        <service android:name=".service.UploadService"/>
+
+        <service android:name=".service.UploadService" />
 
     </application>
 
