--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'realm-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "cn.kisoo.forest"
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     testCompile 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation project(':beams')
 }
 repositories {
