--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activity.LoginActivity"
+            android:name=".ui.activity.MainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,9 @@
         <activity
             android:name=".ui.activity.RegisterActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".ui.activity.MainActivity" />
+        <!--<activity android:name=".ui.activity.MainActivity" />-->
+        <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.UserActivity" />
 
         <service android:name=".service.UploadService" />
 
