--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.orhanobut:logger:2.2.0'
     testCompile 'junit:junit:4.12'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation project(':beams')
