--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.google.code.gson:gson:2.6.2'
     implementation project(':beams')
 }
 repositories {
