--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,15 @@
         <!--<activity android:name=".ui.activity.MainActivity" />-->
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.UserActivity" />
-        <service android:name=".service.UploadService" />
+
         <activity android:name=".ui.activity.UpdateNameActivity" />
         <activity android:name=".ui.activity.UpdatePasswordActivity" />
         <activity android:name=".ui.activity.UpdateSchoolNumActivity" />
         <activity android:name=".ui.activity.AwardActivity" />
+        <activity android:name=".ui.activity.WhiteListActivity" />
+
+        <service android:name=".service.UploadService" />
+
 
     </application>
 
