--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.AdsActivity"
+            android:theme="@style/transparent"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +25,13 @@
         <activity android:name=".ui.activity.TimeDownActivity" />
         <activity android:name=".ui.activity.ResultShowActivity" />
         <activity
+            android:name=".ui.activity.LoginActivity"
+            android:launchMode="singleTask" />
+        <activity
             android:name=".ui.activity.RegisterActivity"
             android:launchMode="singleTask" />
         <activity android:name=".ui.activity.MainActivity" />
-        <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.UserActivity" />
-
         <activity android:name=".ui.activity.UpdateNameActivity" />
         <activity android:name=".ui.activity.UpdatePasswordActivity" />
         <activity android:name=".ui.activity.UpdateSchoolNumActivity" />
