--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.orhanobut:logger:2.2.0'
@@ -37,8 +40,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.android.support:cardview-v7:25.3.1'
     implementation project(':beams')
 }
 repositories {
